various documentations added
