# app/Http/Controllers/Content/ContentLandingController.php
@@ -10,6 +10,7 @@ use App\Models\LandingPageTicketContent;
 use App\Models\Seat;
 use App\Models\TicketContent;
 use Illuminate\Http\Request;
+
 class ContentLandingController extends Controller
 {
     /**
@@ -32,11 +33,49 @@ class ContentLandingController extends Controller
      */
     public function index()
     {
-
-
         $landingContent = $this->getLandingContent();
         return json_encode($landingContent, JSON_UNESCAPED_UNICODE);
     }
+
+    /**
+     * @OA\Get(
+     *    path="/api/pages/reservations",
+     *    tags={"Pages"},
+     *    summary="Get content of reservations page",
+     *    description="Get content of reservations page",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *          @OA\Schema(
+     *            
+     *                            @OA\Property(
+     *                     property="takenSeats",
+     *                     type="integer"
+     *                 ),     
+     *                @OA\Property(
+     *                     property="freeSeats",
+     *                     type="integer"
+     *                 ),
+     *                       @OA\Property(
+     *      type="array",
+     *      @OA\Items(
+     *          type="array",
+     *          @OA\Items()
+     *      ),
+     *      description="List of Seat ids"
+     * ),
+
+     *                 example={ "takenSeats": 3, "freeSeats": 7, "seats" = {3,54,645,}}
+     *            
+     *          )
+     *          )
+     *       ),
+     *   @OA\Response(response=401, description="Unauthorized"),
+     *   @OA\Response(response=404, description="Not Found")
+     *  )
+     */
     public function indexReservations()
     {
         $takenSeats = count(Seat::where('rezervace', '!=', null)->get());
