# app/Models/LandingPageContent.php
@@ -8,13 +8,27 @@ use Illuminate\Database\Eloquent\Model;
 use Illuminate\Http\Resources\Json\JsonResource;
 
 /**
- * @OA\Schema(type="object")
+ * @OA\Schema(schema="LandingPageContent")
  */
 class LandingPageContent extends JsonResource
 {
-
+  /**
+     * @OA\Property
+     *
+     * @var Collection
+     */
     public Collection $contents;
+      /**
+     * @OA\Property
+     *
+     * @var Collection
+     */
     public Collection $contacts;
+          /**
+     * @OA\Property
+     *
+     * @var LandingPageTicketContent
+     */
     public LandingPageTicketContent $tickets;
 
     public function __construct(Collection $contents, Collection $contacts,LandingPageTicketContent $tickets)
