# app/Models/LandingPageTicketContent.php
@@ -7,10 +7,22 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Support\Facades\Date;
 
+/**
+ * @OA\Schema(schema="LandingPageTicketContent")
+ */
 class LandingPageTicketContent
 {
-
+    /**
+     * @OA\Property
+     *
+     * @var string
+     */
     public string $reservations_from;
+    /**
+     * @OA\Property
+     *
+     * @var Collection
+     */
     public Contact $contact;
 
     public function __construct(string $reservations_from, Contact $contact)
