# app/Models/Reservation.php
@@ -6,6 +6,9 @@ use Illuminate\Database\Eloquent\Collection;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(schema="Reservation")
+ */
 class Reservation extends Model
 {
     use HasFactory;
@@ -26,6 +29,10 @@ class Reservation extends Model
     protected $attributes = [
         'status' => 1
     ];
-    
+    /**
+     * @OA\Property
+     *
+     * @var Collection
+     */
     public Collection $seats;
 }
